Fix collapsing of consecutive whitespace in compose area

--- a/src/sass/sections/_compose_area.scss
+++ b/src/sass/sections/_compose_area.scss
@@ -34,6 +34,7 @@ compose-area {
                         min-height: 22px;
                         max-height: calc(1.3em * 5);
                         line-height: 20px;
+                        white-space: pre-wrap;
 
                         // show placeholder if field is on focus
                         &:empty {
